--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -11,5 +11,5 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
       - run: pip install -U safety
-      - name: Check dependencies for known security vulterabilities using Safety
+      - name: Check dependencies for known security vulnerabilities using Safety
         run: safety check
