--- a/.github/actions/commit-range/action.yml
+++ b/.github/actions/commit-range/action.yml
@@ -39,5 +39,5 @@ runs:
           COMMIT_RANGE="${OLDEST}...${NEWEST}"
         fi
         echo -e "\e[35m\e[1m COMMIT_RANGE = ${COMMIT_RANGE} \e[0m"
-        echo "::set-output name=commit-range::${COMMIT_RANGE}"
+        echo "commit-range=${COMMIT_RANGE}" >> $GITHUB_OUTPUT
       shell: bash
