--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -10,7 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
-      - run: pip install -U black pygments pylint pytest>=6.2.0 toml
+      - name: Install dependencies for running Pylint
+        run: |
+          pip install -U black pygments pylint pytest>=6.2.0 toml
+          pip list
       - uses: wearerequired/lint-action@v2.1.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
