Satisfy `pylint` in `update_contributors.py`

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -12,7 +12,18 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install dependencies for running Pylint
         run: |
-          pip install -U black pygments pylint pytest>=6.2.0 regex toml
+          pip install -U \
+            airium \
+            black \
+            defusedxml \
+            pygments \
+            pylint \
+            pytest>=6.2.0 \
+            regex \
+            requests \
+            requests-cache \
+            ruamel.yaml \
+            toml
           pip list
       - uses: wearerequired/lint-action@v2.1.0
         with:
