Add @zachnorton4C as a contributor

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -163,3 +163,5 @@ wnoise:
 yoursvivek:
   - {link_type: issues, type: Bug reports}
   - {link_type: commits, type: Documentation}
+zachnorton4C:
+  - {link_type: issues, type: Bug reports}
