--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -88,7 +88,7 @@ jobs:
           - '3.8'
           - '3.9'
           - '3.10'
-        constraints: ['']
+        constraints: ['black==22.12.0']
         include:
           - os: ubuntu-latest
             python-version: '3.7'
