--- a/.github/workflows/test-future.yml
+++ b/.github/workflows/test-future.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.x'
       - name: Install dependencies
         run: |
           # strict dependency resolution added in pip 20.3
