--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -89,6 +89,7 @@ jobs:
           - '3.9'
           - '3.10'
           - '3.11'
+          - '3.12-dev'
         constraints: ['black==22.12.0']
         include:
           - os: ubuntu-latest
