--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,8 @@ pygments.lexers =
     lint_description = darker.highlighting.lexers:DescriptionLexer
 
 [options.extras_require]
+flynt =
+    flynt>=0.76
 isort =
     isort>=5.0.1
 color =
@@ -55,6 +57,7 @@ test =
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
     cryptography>=3.3.2  # through twine, fixes CVE-2020-36242
     defusedxml>=0.7.1
+    flynt>=0.76
     isort>=5.0.1
     pygments
     pytest>=6.2.0
