Set Mypy up for the installed `flynt` package

--- a/mypy.ini
+++ b/mypy.ini
@@ -78,6 +78,9 @@ warn_return_any = False
 [mypy-defusedxml.*]
 ignore_missing_imports = True
 
+[mypy-flynt.*]
+ignore_missing_imports = True
+
 [mypy-isort.*]
 ignore_missing_imports = True
 
