--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -13,6 +13,7 @@ jobs:
       - run: |
           pip install -U \
             black \
+            flynt \
             isort \
             mypy>=0.990 \
             pytest \
