Start to adopt pbr

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,15 @@
 [metadata]
 name = darker
-version = attr: darker.version.__version__
 author = Antti Kaihola
 author_email = 13725+akaihola@users.noreply.github.com
+summary = Apply Black formatting only in regions changed since last commit
+description-file =
+    README.rst
+description-content-type = text/x-rst; charset=UTF-8
+home-page = https://github.com/akaihola/darker
 license = BSD
 license_file = LICENSE.rst
-description = Apply Black formatting only in regions changed since last commit
-# long_description is read and manipulated in setup.py
-long_description_content_type = text/x-rst
+requires-python = >=3.6
 classifiers =
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.7
@@ -18,13 +20,8 @@ classifiers =
 project_urls =
     Source Code = https://github.com/akaihola/darker
     Change Log = https://github.com/akaihola/darker/blob/master/CHANGES.rst
-url = https://github.com/akaihola/darker
 
 [options]
-include_package_data = True
-package_dir =
-    =src
-packages = find:
 install_requires =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     black>=21.5b1
@@ -34,10 +31,12 @@ install_requires =
 #       with the minimum required Python version
 python_requires = >=3.7
 
-[options.packages.find]
-where = src
+[files]
+packages =
+    darker
+packages_root = src
 
-[options.entry_points]
+[entry_points]
 console_scripts =
     darker = darker.__main__:main_with_error_handling
 pygments.lexers =
