Add Blue as an optional requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,8 @@ console_scripts =
 [options.extras_require]
 black =
     black>=22.3.0
+blue =
+    blue>=0.8.0
 flynt =
     flynt>=0.76
 isort =
@@ -65,6 +67,7 @@ pyupgrade =
 test =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     black>=22.3.0
+    blue>=0.8.0
     cryptography>=3.3.2  # through twine, fixes CVE-2020-36242
     defusedxml>=0.7.1
     flynt>=0.76
