Add @victorcui96 as a contributor

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -157,6 +157,8 @@ tgross35:
 tkolleh:
   - {link_type: issues, type: Bug reports}
 tobiasdiez: []
+victorcui96:
+  - {link_type: search-comments, type: Bug reports}
 virtuald:
   - {link_type: issues, type: Bug reports}
 wasdee:
