--- a/contributors.yaml
+++ b/contributors.yaml
@@ -99,6 +99,8 @@ jenshnielsen:
   - {link_type: search, type: Bug reports}
 jsuit:
   - {link_type: search-discussions, type: Bug reports}
+k-dominik:
+  - {link_type: search-comments, type: Bug reports}
 leotrs:
   - {link_type: issues, type: Bug reports}
 levouh:
