Add the `-t/--target-version` command line option

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ requires = ["setuptools", "wheel"]  # PEP 508 specifications.
 
 [tool.black]
 skip-string-normalization = false
+target-version = ["py311"]
 
 [tool.isort]
 profile = "black"
