target-version='py39' when testing with old Black
Oldest supported Black doesn't have py310 and py311 available as target
versions.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -115,6 +115,10 @@ jobs:
       - name: Install Darker and its dependencies from the wheel build earlier
         run: pip install "${{needs.build-wheel.outputs.wheel-path}}[test]"
                          ${{ matrix.upgrade }} ${{ matrix.constraints }}
+      - name: Downgrade target-version when running oldest supported Black
+        if: matrix.constraints == '--constraint constraints-oldest.txt'
+        run: |
+          sed -i 's/py311/py39/' pyproject.toml
       - name: Run Pytest
         run: |
           pytest --darker
