Configure flake8-docstrings and darglint

--- a/setup.cfg
+++ b/setup.cfg
@@ -81,10 +81,26 @@ max-line-length = 88
 ignore =
     # C408 Unnecessary dict call - rewrite as a literal.
     C408
+    # D400 First line should end with a period (from flake8-docstrings)
+    D400
+    # D415 First line should end with a period, question mark, or exclamation point
+    D415
     # E231 missing whitespace after ','
     E231
     # W503 line break before binary operator
     W503
+# Darglint options when run as a Flake8 plugin:
+strictness = short
+docstring_style = sphinx
+# This requires https://github.com/terrencepreilly/darglint/pull/210:
+darglint_ignore_regex=^test_
+
+[darglint]
+# Run `darglint --verbosity=2` to get nice descriptions in messages.
+# Unfortunately `verbosity` isn't read from the configuration file.
+message_template = {path}:{line}: {msg} {msg_id} {obj}
+docstring_style = sphinx
+ignore_regex = ^test_
 
 [codespell]
 ignore-words-list = nd
