Add the `darker[pyupgrade]` extras option

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,8 @@ isort =
     isort>=5.0.1
 color =
     Pygments>=2.4.0
+pyupgrade =
+    pyupgrade>=2.31.0
 test =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     airium>=0.2.3
