--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,8 @@ isort =
     isort>=5.0.1
 color =
     Pygments>=2.4.0
+pyupgrade =
+    pyupgrade>=2.31.0
 test =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     black>=22.3.0
