--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,8 @@ isort =
     isort>=5.0.1
 color =
     Pygments>=2.4.0
+pyupgrade =
+    pyupgrade>=2.31.0
 test =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     black>=22.3.0
@@ -74,6 +76,7 @@ test =
     pylint<=3.2.7  # pylint 3.3.0 dropped Python 3.8 support
     pytest>=6.2.0
     pytest-kwparametrize>=0.0.3
+    pyupgrade>=2.31.0
     regex>=2021.4.4
     requests_cache>=0.7
     ruamel.yaml>=0.17.21
