--- a/.github/workflows/darker-flake8.yml
+++ b/.github/workflows/darker-flake8.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Run Darker
         uses: akaihola/darker@1.7.0
         with:
-          options: --check --diff --color --isort --config pyproject.toml
+          options: -vvv --check --diff --color --isort --config pyproject.toml
           revision: origin/master...
           lint: flake8
