--- a/.github/workflows/darker-flake8.yml
+++ b/.github/workflows/darker-flake8.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Run Darker
-        uses: akaihola/darker@1.7.0
+      - name: Run Darker's own GitHub action straight from the repository
+        uses: ./
         with:
           options: -vvv --check --diff --color --isort --config pyproject.toml
           revision: origin/master...
