Only lint `src/darker` in action test

--- a/.github/workflows/darker-flake8.yml
+++ b/.github/workflows/darker-flake8.yml
@@ -15,5 +15,6 @@ jobs:
         uses: ./
         with:
           options: -vvv --check --diff --color --isort --config pyproject.toml
+          src: src/darker
           revision: origin/master...
           lint: flake8
