Install branch Darker in action test

--- a/.github/workflows/darker-flake8.yml
+++ b/.github/workflows/darker-flake8.yml
@@ -18,3 +18,4 @@ jobs:
           src: src/darker
           revision: origin/master...
           lint: flake8
+          version: "@${{ github.ref_name }}"
