Temporarily limit Flynt to versions before 0.78
This works around the internal API change. In the next minor release
compatibility with Flynt 0.78 will be introduced.

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ pygments.lexers =
 
 [options.extras_require]
 flynt =
-    flynt>=0.76
+    flynt>=0.76,<0.78
 isort =
     isort>=5.0.1
 color =
@@ -57,7 +57,7 @@ test =
     black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
     cryptography>=3.3.2  # through twine, fixes CVE-2020-36242
     defusedxml>=0.7.1
-    flynt>=0.76
+    flynt>=0.76,<0.78
     isort>=5.0.1
     pygments
     pytest>=6.2.0
