Add @bdperkin as a contributor

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -44,6 +44,8 @@ akaihola:
   - {link_type: commits, type: Maintenance}
 aljazerzen:
   - {link_type: commits, type: Code}
+bdperkin:
+  - {link_type: issues, type: Bug reports}
 brtknr:
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
 casio:
