Add a `News` link on the PyPI page

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ classifiers =
 project_urls =
     Source Code = https://github.com/akaihola/darker
     Change Log = https://github.com/akaihola/darker/blob/master/CHANGES.rst
+    News = https://github.com/akaihola/darker/discussions/categories/announcements
 url = https://github.com/akaihola/darker
 
 [options]
