Use `pip-requirements-parser` in the GitHub Action
`pkg_resources` is no longer available by default in the environment
since `setuptools` was dropped in Python 3.12. Instead of installing one
of those, we're now using a more stable solution since `pkg_resources`
is deprecated in favor of `importlib` which doesn't provide tooling for
parsing requirements.

--- a/action.yml
+++ b/action.yml
@@ -56,6 +56,7 @@ runs:
         sys.exit(proc.returncode)
         "
 
+        pip install pip-requirements-parser
         if [ "$RUNNER_OS" == "Windows" ]; then
           echo $entrypoint | python
         else
