Install `pip-requirements-parser` for Pylint check

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,6 +16,7 @@ jobs:
             airium \
             black \
             defusedxml \
+            pip-requirements-parser \
             pygments \
             pylint \
             pytest>=6.2.0 \
