Add Mypy as a testing dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ test =
     defusedxml>=0.7.1
     flynt>=0.76,<0.78
     isort>=5.0.1
+    mypy>=0.990
     pygments
     pytest>=6.2.0
     pytest-darker
