--- a/contributors.yaml
+++ b/contributors.yaml
@@ -65,6 +65,8 @@ dhrvjha:
   - {link_type: pulls-author, type: Code}
 dsmanl:
   - {link_type: issues, type: Bug reports}
+dwt:
+  - {link_type: issues, type: Bug reports}
 falkben:
   - {link_type: pulls-author, type: Documentation}
 fizbin:
