--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -58,7 +58,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v22
         with:
-          nix_path: nixpkgs=channel:nixos-21.11
+          nix_path: nixpkgs=channel:nixos-unstable
       - name: Download wheel uploaded by the build-wheel job
         uses: actions/download-artifact@v3
       - name: Run tests in nix-shell
