Revert "Downgrade to Python to 3.9 on macOS Nix"
This reverts commit c965f04e7aa96e68169f1772ecea2a691567c318.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -46,12 +46,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - os: ubuntu-latest
-            python-version: python310
-          - os: macos-latest
-            python-version: python39
-            # see https://github.com/cachix/install-nix-action/issues/135
+        os:
+          - ubuntu-latest
+          - macos-latest
     needs:
       - build-wheel
     steps:
@@ -65,7 +62,6 @@ jobs:
         run: |
           nix-shell \
             --pure \
-            --argstr pythonVersion ${{ matrix.python-version }} \
             --run '
               python -m venv venv
               source venv/bin/activate
