--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,8 @@ packages = find:
 install_requires =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     black>=21.5b1,<24.2  # upper limit until incompatibility fixed
+    darkgraylib @ git+https://github.com/akaihola/darkgraylib.git@main
+    graylint @ git+https://github.com/akaihola/graylint.git@main
     toml>=0.10.0
 # NOTE: remember to keep `.github/workflows/python-package.yml` in sync
 #       with the minimum required Python version
