Add `darkgraylib` and `graylint` for Pylint & Mypy

--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -13,7 +13,9 @@ jobs:
       - run: |
           pip install -U \
             black \
+            git+https://github.com/akaihola/darkgraylib.git@main \
             flynt \
+            git+https://github.com/akaihola/graylint.git@main \
             isort \
             mypy>=0.990 \
             pytest \
