--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,8 @@ src = [
     "src",
 ]
 revision = "origin/master..."
+
+[tool.pylint."messages control"]
+# Check import order only with isort. Pylint doesn't support a custom list of first
+# party packages. We want to consider "darkgraylib" and "graylint" as first party.
+disable = ["wrong-import-order"]
