Ensure distributions contain `py.typed`

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,10 @@ python_requires = >=3.8
 [options.packages.find]
 where = src
 
+[options.package_data]
+darker =
+  py.typed
+
 [options.entry_points]
 console_scripts =
     darker = darker.__main__:main_with_error_handling
