CI now shows a diff of changed `--help` output
This is done if `README.rst` is outdated compared to what
`darker --options-for-readme` outputs.

--- a/.github/workflows/help-in-readme.yml
+++ b/.github/workflows/help-in-readme.yml
@@ -8,16 +8,4 @@ jobs:
       - uses: actions/checkout@v4
       - run: pip install '.[flynt,isort]'
       - name: Verify that README contains output of darker --help
-        shell: python
-        run: |
-          import sys
-          from pathlib import Path
-          from pprint import pprint
-          from subprocess import check_output, STDOUT
-          cmd = ["darker", "--options-for-readme"]
-          usage = check_output(cmd, stderr=STDOUT, encoding="utf-8")
-          readme = Path("README.rst").read_text()
-          if usage in readme:
-              sys.exit(0)
-          pprint(str.splitlines(usage, keepends=True), width=94)
-          sys.exit(1)
+        run: darker --verify-readme
