--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ console_scripts =
 
 [options.extras_require]
 flynt =
-    flynt>=0.76,<0.78
+    flynt>=0.76
 isort =
     isort>=5.0.1
 color =
@@ -55,7 +55,7 @@ test =
     black>=22.3.0
     cryptography>=3.3.2  # through twine, fixes CVE-2020-36242
     defusedxml>=0.7.1
-    flynt>=0.76,<0.78
+    flynt>=0.76
     isort>=5.0.1
     mypy>=0.990
     pathspec  # to test `gen_python_files` in `test_black_diff.py`
