Add @Eyobkibret15 as a contributor

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -17,6 +17,8 @@ DavidCDreher:
   - {link_type: issues, type: Bug reports}
 DylanYoung:
   - {link_type: issues, type: Bug reports}
+Eyobkibret15:
+  - {link_type: search-discussions, type: Bug reports}
 Hainguyen1210:
   - {link_type: issues, type: Bug reports}
 KangOl:
