--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,7 @@ test =
     flynt>=0.76,<0.78
     isort>=5.0.1
     mypy>=0.990
+    pathspec  # to test `gen_python_files` in `test_black_diff.py`
     pip-requirements-parser
     pygments
     pytest>=6.2.0
