show_capture -> show-capture

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 doctest_optionflags = NORMALIZE_WHITESPACE
-show_capture = no
+show-capture = no
 addopts =
   --doctest-modules
   --durations 10
