--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ package_dir =
 packages = find:
 install_requires =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
-    black>=21.5b1
+    black>=21.5b1,<24.2  # upper limit until incompatibility fixed
     toml>=0.10.0
     typing-extensions ; python_version < "3.8"
 # NOTE: remember to keep `.github/workflows/python-package.yml` in sync
@@ -55,7 +55,7 @@ color =
 test =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
     airium>=0.2.3
-    black>=21.7b1  # to prevent Mypy error about `gen_python_files`, see issue #189
+    black>=21.7b1,<24.2  # prevent Mypy error about `gen_python_files`, see issue #189
     cryptography>=3.3.2  # through twine, fixes CVE-2020-36242
     defusedxml>=0.7.1
     flynt>=0.76,<0.78
