Format with Black 2024

--- a/setup.cfg
+++ b/setup.cfg
@@ -92,6 +92,8 @@ ignore =
     D400
     # D415 First line should end with a period, question mark, or exclamation point
     D415
+    # E704 multiple statements on one line (def)
+    E704
     # E231 missing whitespace after ','
     E231
     # W503 line break before binary operator
