--- a/contributors.yaml
+++ b/contributors.yaml
@@ -38,6 +38,8 @@ PatrickJordanCongenica:
   - {link_type: search-discussions, type: Bug reports}
 RishiKumarRay:
   - {link_type: search, type: Bug reports}
+Svenito:
+  - {link_type: pulls-author, type: Code}
 agandra:
   - {link_type: issues, type: Bug reports}
 akaihola:
