Add @Timple as a contributor

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -40,6 +40,8 @@ RishiKumarRay:
   - {link_type: search, type: Bug reports}
 Svenito:
   - {link_type: pulls-author, type: Code}
+Timple:
+  - {link_type: search-comments, type: Bug reports}
 agandra:
   - {link_type: issues, type: Bug reports}
 akaihola:
