--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -91,7 +91,7 @@ jobs:
           - '3.10'
           - '3.11'
           - '3.12-dev'
-        constraints: ['black==22.12.0']
+        constraints: ['']
         post_install: ['']
         include:
           - os: ubuntu-latest
