--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -127,17 +127,7 @@ jobs:
         if: matrix.constraints == '--constraint constraints-oldest.txt'
         run: |
           sed -i 's/py311/py39/' pyproject.toml
-      - name: Run Pytest with the Darker plugin on recent Black versions
-        if: matrix.constraints != '--constraint constraints-oldest.txt'
-        run: |
-          pytest --darker
-      - name: Run Pytest without the Darker plugin on oldest Black version
-        # The reformatting rules used to be a bit different. We don't need to
-        # test reformatting Darker's own code base with old Black versions.
-        # Interoperability is ensured by unit tests.
-        if: matrix.constraints == '--constraint constraints-oldest.txt'
-        run: |
-          pytest
+      - run: pytest
 
   build-sdist-validate-dists:
     runs-on: ubuntu-latest
