--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -67,6 +67,8 @@ jobs:
             --run '
               python -m venv venv
               source venv/bin/activate
+              cert_file=/nix/var/nix/profiles/default/etc/ssl/certs/ca-bundle.crt
+              export NIX_SSL_CERT_FILE=$cert_file
               pip install "${{needs.build-wheel.outputs.wheel-path}}[test]"
               # Run tests in installed package to avoid plugin import issue:
               pytest $(python -c "
