Install `darkgray-dev-tools` from PyPI

--- a/setup.cfg
+++ b/setup.cfg
@@ -81,7 +81,7 @@ test =
 release =
     airium>=0.2.3
     click>=8.0.0
-    darkgray-dev-tools @ https://github.com/akaihola/darkgray-dev-tools/archive/refs/heads/main.zip
+    darkgray-dev-tools~=0.0.1
     defusedxml>=0.7.1
     requests_cache>=0.7
 
