Add support for Python 3.12
Make sure to test with it, too.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -92,7 +92,8 @@ jobs:
           - '3.9'
           - '3.10'
           - '3.11'
-          - '3.12-dev'
+          - '3.12'
+          - '3.13-dev'
         constraints: ['']
         post_install: ['']
         include:
@@ -100,7 +101,7 @@ jobs:
             python-version: '3.8'
             constraints: '--constraint constraints-oldest.txt'
           - os: ubuntu-latest
-            python-version: '3.11'
+            python-version: '3.12'
             post_install: pip install -r constraints-future.txt
                                       --upgrade --upgrade-strategy=eager
     needs:
@@ -128,7 +129,7 @@ jobs:
       - name: Downgrade target-version when running oldest supported Black
         if: matrix.constraints == '--constraint constraints-oldest.txt'
         run: |
-          sed -i 's/py311/py39/' pyproject.toml
+          sed -i 's/, "py311", "py312"//' pyproject.toml
       - run: pytest
 
   build-sdist-validate-dists:
