--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ classifiers =
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 project_urls =
     Source Code = https://github.com/akaihola/darker
     Change Log = https://github.com/akaihola/darker/blob/master/CHANGES.rst
