Move upd-contributors script to darkgray-dev-tools
The script was modified a bit. Need to rename one link type. Remove
extra dependencies from `[release]` extra. Require darkgray-dev-tools
0.0.2.

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -148,7 +148,7 @@ matclayton:
 mayk0gan:
   - {link_type: issues, type: Bug reports}
 minrk:
-  - {link_type: darker-feedstock-issues, type: Code}
+  - {link_type: feedstock-issues, type: Code}
 mrfroggg:
   - {link_type: search-comments, type: Bug reports}
 muggenhor:
