--- a/contributors.yaml
+++ b/contributors.yaml
@@ -126,8 +126,11 @@ jenshnielsen:
   - {link_type: search, type: Bug reports}
 jsuit:
   - {link_type: search-discussions, type: Bug reports}
+jvacek:
+  - {link_type: search, type: Bug reports}
 k-dominik:
   - {link_type: search-comments, type: Bug reports}
+  - {link_type: search-discussions, type: Bug reports}
 kedhammar:
   - {link_type: search-discussions, type: Bug reports}
   - {link_type: issues, type: Bug reports}
