--- a/contributors.yaml
+++ b/contributors.yaml
@@ -203,6 +203,8 @@ talhajunaidd:
   - {link_type: commits, type: Code}
 tapted:
   - {link_type: issues, type: Bug reports}
+tehunter:
+  - {link_type: pulls-author, type: Code}
 tgross35:
   - {link_type: issues, type: Bug reports}
 tkolleh:
