--- a/contributors.yaml
+++ b/contributors.yaml
@@ -1,6 +1,7 @@
 ---
 AckslD:
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 Ashblaze:
   - {link_type: search-discussions, type: Bug reports}
 Asuskf:
@@ -9,14 +10,20 @@ Carreau:
   - {link_type: commits, type: Code}
   - {link_type: commits, type: Documentation}
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
+  - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
+  - {link_type: pulls-author, type: Code}
+  - {link_type: search-comments, type: Reviewed Pull Requests}
 CorreyL:
   - {link_type: commits, type: Code}
   - {link_type: commits, type: Documentation}
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
+  - {link_type: search-comments, type: Bug reports}
 DavidCDreher:
   - {link_type: issues, type: Bug reports}
 DylanYoung:
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 Eyobkibret15:
   - {link_type: search-discussions, type: Bug reports}
 Hainguyen1210:
@@ -27,10 +34,14 @@ Krischtopp:
   - {link_type: issues, type: Bug reports}
 MatthijsBurgh:
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
+  - {link_type: search-comments, type: Reviewed Pull Requests}
+  - {link_type: pulls-author, type: Code}
 Mystic-Mirage:
   - {link_type: commits, type: Code}
   - {link_type: commits, type: Documentation}
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
+  - {link_type: search-comments, type: Bug reports}
 Pacu2:
   - {link_type: pulls-author, type: Code}
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
@@ -40,8 +51,12 @@ RishiKumarRay:
   - {link_type: search, type: Bug reports}
 Svenito:
   - {link_type: pulls-author, type: Code}
+  - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
+  - {link_type: search-comments, type: Reviewed Pull Requests}
 Timple:
   - {link_type: search-comments, type: Bug reports}
+  - {link_type: search-comments, type: Reviewed Pull Requests}
 agandra:
   - {link_type: issues, type: Bug reports}
 akaihola:
@@ -50,6 +65,10 @@ akaihola:
   - {link_type: commits, type: Documentation}
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
   - {link_type: commits, type: Maintenance}
+  - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
+  - {link_type: pulls-author, type: Code}
+  - {link_type: search-comments, type: Reviewed Pull Requests}
 aljazerzen:
   - {link_type: commits, type: Code}
 baod-rate:
@@ -70,8 +89,12 @@ chrisdecker1201:
   - {link_type: issues, type: Bug reports}
 clintonsteiner:
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
+  - {link_type: pulls-author, type: Code}
+  - {link_type: search-comments, type: Reviewed Pull Requests}
 deadkex:
   - {link_type: search-discussions, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 dhrvjha:
   - {link_type: search-comments, type: Bug reports}
   - {link_type: pulls-author, type: Code}
@@ -79,6 +102,7 @@ dkeraudren:
   - {link_type: search-comments, type: Bug reports}
 dshemetov:
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 dsmanl:
   - {link_type: issues, type: Bug reports}
 dwt:
@@ -88,6 +112,9 @@ falkben:
   - {link_type: search-discussions, type: Bug reports}
 felixvd:
   - {link_type: pulls-author, type: Code}
+  - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
+  - {link_type: search-comments, type: Reviewed Pull Requests}
 fizbin:
   - {link_type: issues, type: Bug reports}
 flying-sheep:
@@ -100,12 +127,17 @@ gergelypolonkai:
   - {link_type: issues, type: Bug reports}
 gesslerpd:
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 guettli:
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 hauntsaninja:
   - {link_type: issues, type: Bug reports}
 hugovk:
   - {link_type: pulls-author, type: Code}
+  - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
+  - {link_type: search-comments, type: Reviewed Pull Requests}
 ioggstream:
   - {link_type: search-comments, type: Bug reports}
 irynahryshanovich:
@@ -122,15 +154,20 @@ jasleen19:
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
 jedie:
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
+  - {link_type: pulls-author, type: Code}
 jenshnielsen:
   - {link_type: search, type: Bug reports}
 jsuit:
   - {link_type: search-discussions, type: Bug reports}
 jvacek:
   - {link_type: search, type: Bug reports}
+  - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 k-dominik:
   - {link_type: search-comments, type: Bug reports}
   - {link_type: search-discussions, type: Bug reports}
+  - {link_type: issues, type: Bug reports}
 kedhammar:
   - {link_type: search-discussions, type: Bug reports}
   - {link_type: issues, type: Bug reports}
@@ -148,6 +185,8 @@ markddavidoff:
 martinRenou:
   - {link_type: conda-issues, type: Code}
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
+  - {link_type: search-comments, type: Bug reports}
+  - {link_type: search-comments, type: Reviewed Pull Requests}
 matclayton:
   - {link_type: issues, type: Bug reports}
 mayk0gan:
@@ -176,18 +215,23 @@ qubidt:
 rogalski:
   - {link_type: pulls-author, type: Code}
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 roniemartinez:
   - {link_type: issues, type: Bug reports}
 rossbar:
   - {link_type: issues, type: Bug reports}
 samoylovfp:
   - {link_type: pulls-reviewed, type: Reviewed Pull Requests}
+  - {link_type: search-comments, type: Bug reports}
 seweissman:
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 sgaist:
   - {link_type: pulls-author, type: Code}
+  - {link_type: issues, type: Bug reports}
 shane-kearns:
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 shangxiao:
   - {link_type: pulls-author, type: Code}
   - {link_type: issues, type: Bug reports}
@@ -216,11 +260,13 @@ virtuald:
   - {link_type: issues, type: Bug reports}
 wasdee:
   - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 wjdp:
   - {link_type: issues, type: Bug reports}
   - {link_type: pulls-author, type: Documentation}
 wkentaro:
   - {link_type: issues, type: Bug reports}
+  - {link_type: pulls-author, type: Code}
 wnoise:
   - {link_type: issues, type: Bug reports}
 wpnbos:
