--- a/contributors.yaml
+++ b/contributors.yaml
@@ -21,6 +21,9 @@ CorreyL:
   - {link_type: search-comments, type: Bug reports}
 DavidCDreher:
   - {link_type: issues, type: Bug reports}
+DeinAlptraum:
+  - {link_type: search-comments, type: Bug reports}
+  - {link_type: search-discussions, type: Bug reports}
 DylanYoung:
   - {link_type: issues, type: Bug reports}
   - {link_type: search-comments, type: Bug reports}
