docs(contr): add @Garfounkel as contributor

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -29,6 +29,8 @@ DylanYoung:
   - {link_type: search-comments, type: Bug reports}
 Eyobkibret15:
   - {link_type: search-discussions, type: Bug reports}
+Garfounkel:
+  - {link_type: search-comments, type: Bug reports}
 Hainguyen1210:
   - {link_type: issues, type: Bug reports}
 KangOl:
